Add media queries to login, signup, and dashboard

--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -179,3 +179,9 @@ a {
     transform: translateX(110%);
     transition: all var(--speed) ease;
 }
+
+@media only screen and (max-width: 400px) {
+    .hide-on-phone {
+        display: none;
+    }
+}
