--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -46,7 +46,7 @@
     width: 500px;
     height: 500px;
     background-image: url(https://wallpaperaccess.com/full/5826.jpg);
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     margin-right: 10%;
@@ -267,6 +267,15 @@
     filter: brightness(1.2);
 }
 
+.calendar-item {
+    margin-top: 100px;
+}
+
+.calendar-frame {
+    width: 1000px;
+    height: 500px;
+}
+
 /* FOOTER */
 
 .footer {
@@ -283,4 +292,109 @@
 .copyright {
     padding: 0px 20px;
     font-family: cursive;
+}
+
+@media only screen and (max-width: 1325px) {
+    .welcome {
+        flex-direction: column-reverse;
+    }
+
+    .welcome-text {
+        margin-top: -100px;
+        margin-right: 10%;
+        text-align: center;
+    }
+
+    .welcome-img {
+        margin-left: 12%;
+    }
+
+    .dashboard-items {
+        flex-direction: column;
+    }
+
+    .campout-item {
+        margin-top: 200px;
+        width: 800px;
+    }
+
+    .contact-item {
+        display: none;
+    }
+
+    .calendar-item {
+        margin-top: -75px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .calendar-frame {
+        width: 800px;
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    .calendar-frame {
+        width: 600px;
+    }
+
+    .campout-item {
+        margin-bottom: 100px;
+        width: 500px;
+    }
+
+    .job-item {
+        flex-direction: column;
+        margin-bottom: 100px;
+        text-align: center;
+    }
+
+    .job-image {
+        width: 60%;
+    }
+
+    .job-button {
+        border-radius: 15px;
+        width: 50%;
+    }
+
+    .footer {
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .calendar-frame {
+        width: 500px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .calendar-frame {
+        width: 450px;
+    }
+
+    .campout-item {
+        width: 450px;
+    }
+
+    .job-text {
+        width: 50%;
+    }
+
+    .job-button {
+        margin-top: 35px;
+    }
+
+    .job-image {
+        width: 45%;
+    }
+
+    .welcome-text {
+        margin-right: 15%;
+    }
+
+    .hide-on-600 {
+        display: none;
+    }
 }
