--- a/src/LogIn.css
+++ b/src/LogIn.css
@@ -72,3 +72,52 @@
     color: #717377;
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 1250px) {
+    .login-form {
+        margin-top: 20%;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .login-form {
+        margin-top: 25%;
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    .log-in-container {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .log-in-container {
+        height: 75%;
+    }
+
+    .to-signup {
+        margin-top: 0px;
+        margin-bottom: -45px;
+        width: 60%;
+        text-align: center;
+    }
+
+    .login-submit {
+        width: 350px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .log-in-container {
+        width: 75%;
+    }
+
+    .login-submit {
+        width: 300px;
+    }
+
+    .to-signup {
+        width: 70%;
+    }
+}
